--- a/spring-cloud-task-app-generator/pom.xml
+++ b/spring-cloud-task-app-generator/pom.xml
@@ -32,6 +32,8 @@
                     <generatedApps>
                         <timestamp-task/>
                         <spark-client-task/>
+                        <spark-cluster-task/>
+                        <spark-yarn-task/>
                     </generatedApps>
                 </configuration>
             </plugin>
