Add documentation infrastructure
Fixes spring-cloud/spring-cloud-task-app-starters#1

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <module>spring-cloud-task-spark-common-configuration</module>
     <module>spring-cloud-task-app-dependencies</module>
     <module>spring-cloud-task-app-generator</module>
+    <module>spring-cloud-task-app-starters-docs</module>
     <module>apps</module>
   </modules>
   <scm>
