Adding sqoop-tool and sqoop-job task apps
- renamed spring-cloud-task-spark-common-configuration to spring-cloud-task-spark-common

- added spring-cloud-task-sqoop-common for config and utils for Sqoop tasks

- added some deps/versions in spring-cloud-task-app-dependencies BOM

--- a/apps/pom.xml
+++ b/apps/pom.xml
@@ -11,6 +11,8 @@
     <module>spark-client-task</module>
     <module>spark-cluster-task</module>
     <module>spark-yarn-task</module>
+    <module>sqoop-job-task</module>
+    <module>sqoop-tool-task</module>
   </modules>
   <build>
     <plugins>
