--- a/spring-cloud-task-app-generator/pom.xml
+++ b/spring-cloud-task-app-generator/pom.xml
@@ -36,6 +36,8 @@
                         <spark-client-task/>
                         <spark-cluster-task/>
                         <spark-yarn-task/>
+                        <sqoop-job-task/>
+                        <sqoop-tool-task/>
                     </generatedApps>
                 </configuration>
             </plugin>
