Adding sqoop-tool and sqoop-job task apps
- renamed spring-cloud-task-spark-common-configuration to spring-cloud-task-spark-common

- added spring-cloud-task-sqoop-common for config and utils for Sqoop tasks

- added some deps/versions in spring-cloud-task-app-dependencies BOM

polishing

Refactoring sqoop configuration classes to end with *Configuration
Temporarily ignoring integ tests in Sqoop tool task

Polishing

polishing before the merge
Re-enable tests in generated apps

--- a/spring-cloud-task-app-generator/pom.xml
+++ b/spring-cloud-task-app-generator/pom.xml
@@ -29,18 +29,12 @@
                         <version>${project.version}</version>
                     </bom>
                     <generatedApps>
-                        <timestamp-task>
-                            <testsIgnored>true</testsIgnored>
-                        </timestamp-task>
-                        <spark-client-task>
-                            <testsIgnored>true</testsIgnored>
-                        </spark-client-task>
-                        <spark-cluster-task>
-                            <testsIgnored>true</testsIgnored>
-                        </spark-cluster-task>
-                        <spark-yarn-task>
-                            <testsIgnored>true</testsIgnored>
-                        </spark-yarn-task>
+                        <timestamp-task />
+                        <spark-client-task/>
+                        <spark-cluster-task/>
+                        <spark-yarn-task/>
+                        <sqoop-job-task/>
+                        <sqoop-tool-task/>
                     </generatedApps>
                 </configuration>
             </plugin>
