--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
   <properties>
     <java.version>1.7</java.version>
     <scs-app-maven-plugin.version>1.0.0.BUILD-SNAPSHOT</scs-app-maven-plugin.version>
-    <spring.cloud.task.core.version>1.0.0.M2</spring.cloud.task.core.version>
+    <spring.cloud.task.core.version>1.0.0.RC1</spring.cloud.task.core.version>
   </properties>
 
   <modules>
