--- a/pom.xml
+++ b/pom.xml
@@ -1,101 +1,110 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.springframework.cloud</groupId>
-    <artifactId>spring-cloud-build</artifactId>
-    <version>1.1.0.RC1</version>
-    <relativePath></relativePath>
-  </parent>
-  <groupId>org.springframework.cloud.task.app</groupId>
-  <artifactId>spring-cloud-task-app-starters</artifactId>
-  <version>1.0.0.BUILD-SNAPSHOT</version>
-  <packaging>pom</packaging>
-  <modules>
-    <module>spring-cloud-starter-task-timestamp</module>
-    <module>spring-cloud-starter-task-spark-client</module>
-    <module>spring-cloud-starter-task-spark-cluster</module>
-    <module>spring-cloud-starter-task-spark-yarn</module>
-    <module>spring-cloud-task-spark-common-configuration</module>
-    <module>spring-cloud-task-app-dependencies</module>
-    <module>spring-cloud-task-app-generator</module>
-    <module>spring-cloud-task-app-starters-docs</module>
-  </modules>
-  <scm>
-    <connection>scm:git:git://github.com/spring-cloud/spring-cloud-task-app-starters.git</connection>
-    <developerConnection>scm:git:ssh://git@github.com/spring-cloud/spring-cloud-task-app-starters.git</developerConnection>
-    <url>https://github.com/spring-cloud/spring-cloud-task-app-starters</url>
-  </scm>
-  <properties>
-    <java.version>1.7</java.version>
-    <spring.cloud.task.core.version>1.0.0.BUILD-SNAPSHOT</spring.cloud.task.core.version>
-  </properties>
-  <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <configuration>
-            <quiet>true</quiet>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <configuration>
-            <redirectTestOutputToFile>true</redirectTestOutputToFile>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-  </build>
-  <profiles>
-    <profile>
-      <id>spring</id>
-      <repositories>
-        <repository>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-          <id>spring-snapshots</id>
-          <name>Spring Snapshots</name>
-          <url>http://repo.spring.io/libs-snapshot-local</url>
-        </repository>
-        <repository>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <id>spring-milestones</id>
-          <name>Spring Milestones</name>
-          <url>http://repo.spring.io/libs-milestone-local</url>
-        </repository>
-        <repository>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <id>spring-releases</id>
-          <name>Spring Releases</name>
-          <url>http://repo.spring.io/release</url>
-        </repository>
-      </repositories>
-      <pluginRepositories>
-        <pluginRepository>
-          <snapshots>
-            <enabled>true</enabled>
-          </snapshots>
-          <id>spring-snapshots</id>
-          <name>Spring Snapshots</name>
-          <url>http://repo.spring.io/libs-snapshot-local</url>
-        </pluginRepository>
-        <pluginRepository>
-          <snapshots>
-            <enabled>false</enabled>
-          </snapshots>
-          <id>spring-milestones</id>
-          <name>Spring Milestones</name>
-          <url>http://repo.spring.io/libs-milestone-local</url>
-        </pluginRepository>
-      </pluginRepositories>
-    </profile>
-  </profiles>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>org.springframework.cloud</groupId>
+		<artifactId>spring-cloud-build</artifactId>
+		<version>1.1.0.RC1</version>
+		<relativePath></relativePath>
+	</parent>
+
+	<groupId>org.springframework.cloud.task.app</groupId>
+	<artifactId>spring-cloud-task-app-starters</artifactId>
+	<version>1.0.0.BUILD-SNAPSHOT</version>
+	<packaging>pom</packaging>
+
+	<modules>
+		<module>spring-cloud-starter-task-timestamp</module>
+		<module>spring-cloud-starter-task-spark-client</module>
+		<module>spring-cloud-starter-task-spark-cluster</module>
+		<module>spring-cloud-starter-task-spark-yarn</module>
+		<module>spring-cloud-task-spark-common-configuration</module>
+		<module>spring-cloud-task-app-dependencies</module>
+		<module>spring-cloud-task-app-generator</module>
+		<module>spring-cloud-task-app-starters-docs</module>
+		<module>spring-cloud-task-app-descriptor</module>
+	</modules>
+
+	<scm>
+		<connection>scm:git:git://github.com/spring-cloud/spring-cloud-task-app-starters.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com/spring-cloud/spring-cloud-task-app-starters.git
+		</developerConnection>
+		<url>https://github.com/spring-cloud/spring-cloud-task-app-starters</url>
+	</scm>
+
+	<properties>
+		<java.version>1.7</java.version>
+		<scs-app-maven-plugin.version>1.0.0.M1</scs-app-maven-plugin.version>
+		<spring.cloud.task.core.version>1.0.0.M2</spring.cloud.task.core.version>
+	</properties>
+
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<configuration>
+						<quiet>true</quiet>
+					</configuration>
+				</plugin>
+				<plugin>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<redirectTestOutputToFile>true</redirectTestOutputToFile>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<profiles>
+		<profile>
+			<id>spring</id>
+			<repositories>
+				<repository>
+					<snapshots>
+						<enabled>true</enabled>
+					</snapshots>
+					<id>spring-snapshots</id>
+					<name>Spring Snapshots</name>
+					<url>http://repo.spring.io/libs-snapshot-local</url>
+				</repository>
+				<repository>
+					<snapshots>
+						<enabled>false</enabled>
+					</snapshots>
+					<id>spring-milestones</id>
+					<name>Spring Milestones</name>
+					<url>http://repo.spring.io/libs-milestone-local</url>
+				</repository>
+				<repository>
+					<snapshots>
+						<enabled>false</enabled>
+					</snapshots>
+					<id>spring-releases</id>
+					<name>Spring Releases</name>
+					<url>http://repo.spring.io/release</url>
+				</repository>
+			</repositories>
+			<pluginRepositories>
+				<pluginRepository>
+					<snapshots>
+						<enabled>true</enabled>
+					</snapshots>
+					<id>spring-snapshots</id>
+					<name>Spring Snapshots</name>
+					<url>http://repo.spring.io/libs-snapshot-local</url>
+				</pluginRepository>
+				<pluginRepository>
+					<snapshots>
+						<enabled>false</enabled>
+					</snapshots>
+					<id>spring-milestones</id>
+					<name>Spring Milestones</name>
+					<url>http://repo.spring.io/libs-milestone-local</url>
+				</pluginRepository>
+			</pluginRepositories>
+		</profile>
+	</profiles>
 </project>
