--- a/spring-cloud-starter-task-spark-yarn/pom.xml
+++ b/spring-cloud-starter-task-spark-yarn/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>org.springframework.cloud.task.app</groupId>
         <artifactId>spring-cloud-task-app-starters</artifactId>
-        <version>1.0.0.M1</version>
+        <version>1.0.0.BUILD-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.springframework.cloud.task.app</groupId>
             <artifactId>spring-cloud-task-spark-common-configuration</artifactId>
-            <version>1.0.0.M1</version>
+            <version>1.0.0.BUILD-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
