--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <parent>
     <groupId>org.springframework.cloud</groupId>
     <artifactId>spring-cloud-build</artifactId>
-    <version>1.1.0.RC1</version>
+    <version>1.1.1.RELEASE</version>
     <relativePath></relativePath>
   </parent>
 
@@ -23,7 +23,7 @@
   <properties>
     <java.version>1.7</java.version>
     <scs-app-maven-plugin.version>1.0.0.BUILD-SNAPSHOT</scs-app-maven-plugin.version>
-    <spring.cloud.task.core.version>1.0.0.BUILD-SNAPSHOT</spring.cloud.task.core.version>
+    <spring.cloud.task.core.version>1.0.0.M2</spring.cloud.task.core.version>
   </properties>
 
   <modules>
