--- a/spring-cloud-task-app-dependencies/pom.xml
+++ b/spring-cloud-task-app-dependencies/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-cloud-dependencies-parent</artifactId>
         <groupId>org.springframework.cloud</groupId>
-        <version>1.1.0.RC1</version>
+        <version>1.1.1.RELEASE</version>
         <relativePath />
     </parent>
 
