Build specific apps URI's for maven and docker

--- a/spring-cloud-task-app-descriptor/src/main/resources/META-INF/apps.properties
+++ b/spring-cloud-task-app-descriptor/src/main/resources/META-INF/apps.properties
@@ -2,3 +2,5 @@ task.timestamp=maven://org.springframework.cloud.task.app:timestamp-task:@projec
 task.spark-client=maven://org.springframework.cloud.task.app:spark-client-task:@project.version@
 task.spark-cluster=maven://org.springframework.cloud.task.app:spark-cluster-task:@project.version@
 task.spark-yarn=maven://org.springframework.cloud.task.app:spark-yarn-task:@project.version@
+task.sqoop-job=maven://org.springframework.cloud.task.app:sqoop-job-task:@project.version@
+task.sqoop-tool=maven://org.springframework.cloud.task.app:sqoop-tool-task:@project.version@
