Fix docker URI's

--- a/spring-cloud-task-app-descriptor/src/main/resources/META-INF/1.0.0.BUILD-SNAPSHOT/task-apps-docker.properties
+++ b/spring-cloud-task-app-descriptor/src/main/resources/META-INF/1.0.0.BUILD-SNAPSHOT/task-apps-docker.properties
@@ -1,4 +1,4 @@
-task.timestamp=docker://org.springframework.cloud.task.app:timestamp-task:1.0.0.BUILD-SNAPSHOT
-task.spark-client=docker://org.springframework.cloud.task.app:spark-client-task:1.0.0.BUILD-SNAPSHOT
-task.spark-cluster=docker://org.springframework.cloud.task.app:spark-cluster-task:1.0.0.BUILD-SNAPSHOT
-task.spark-yarn=docker://org.springframework.cloud.task.app:spark-yarn-task:1.0.0.BUILD-SNAPSHOT
+task.timestamp=docker:springcloudtask:timestamp-task:latest
+task.spark-client=docker:springcloudtask:spark-client-task:latest
+task.spark-cluster=docker:springcloudtask:spark-cluster-task:latest
+task.spark-yarn=docker:springcloudtask:spark-yarn-task:latest
