--- a/_config.yml
+++ b/_config.yml
@@ -16,20 +16,17 @@ gems:
 ### The following properties will change on a project-by-project basis
 
 # Context path in the remote website (usually /<project>), will be prepended to absolute URLs for static resources
-baseurl: /gh-pages
+baseurl: /spring-cloud-task-app-starters
 
 # Name of the project for display in places like page titles
-name: Spring Framework
+name: Spring Cloud Task App Starters
 
 # ID of the project in the metadata API at spring.io (if this is not a
 # valid project ID the javascript widgets in the home page will not work)
-project: spring-framework
+project: spring-cloud-task-app-starters
 
 # Project github URL
-github_repo_url: http://github.com/spring-projects/spring-framework
-
-# Project forum URL
-forum: http://forum.spring.io/forum/spring-projects/container
+github_repo_url: https://github.com/spring-cloud/spring-cloud-task-app-starters
 
 # If you want to include a custom pom.xml or gradle template set these value to true and add _include files
 custom_pom_template: false
