App descriptor changes for docker images
All docker images use a new property called docker.tag that defaults to the literal
string latest which must be updated to the proper release version before a release build

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <java.version>1.7</java.version>
     <scs-app-maven-plugin.version>1.0.0.BUILD-SNAPSHOT</scs-app-maven-plugin.version>
     <spring.cloud.task.core.version>1.0.0.M2</spring.cloud.task.core.version>
+    <docker.tag>latest</docker.tag>
   </properties>
 
   <modules>
