--- a/spring-cloud-task-app-descriptor/src/main/resources/META-INF/task-apps-docker.properties
+++ b/spring-cloud-task-app-descriptor/src/main/resources/META-INF/task-apps-docker.properties
@@ -1,4 +1,4 @@
-task.timestamp=docker:springcloudtask/timestamp-task:latest
-task.spark-client=docker:springcloudtask/spark-client-task:latest
-task.spark-cluster=docker:springcloudtask/spark-cluster-task:latest
-task.spark-yarn=docker:springcloudtask/spark-yarn-task:latest
+task.timestamp=docker:springcloudtask/timestamp-task:@docker.tag@
+task.spark-client=docker:springcloudtask/spark-client-task:@docker.tag@
+task.spark-cluster=docker:springcloudtask/spark-cluster-task:@docker.tag@
+task.spark-yarn=docker:springcloudtask/spark-yarn-task:@docker.tag@
