--- a/spring-cloud-task-app-starters-docs/pom.xml
+++ b/spring-cloud-task-app-starters-docs/pom.xml
@@ -1,21 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.cloud.task.app</groupId>
-        <artifactId>spring-cloud-task-app-starters</artifactId>
-        <version>1.0.0.BUILD-SNAPSHOT</version>
-    </parent>
+	<parent>
+		<groupId>org.springframework.cloud.task.app</groupId>
+		<artifactId>spring-cloud-task-app-starters</artifactId>
+		<version>1.0.0.BUILD-SNAPSHOT</version>
+	</parent>
 	<artifactId>spring-cloud-task-app-starters-docs</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-starter-task-spark-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-starter-task-spark-cluster</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-starter-task-spark-yarn</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-starter-task-sqoop-job</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-starter-task-sqoop-tool</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-starter-task-timestamp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-task-spark-common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud.task.app</groupId>
+			<artifactId>spring-cloud-task-sqoop-common</artifactId>
+		</dependency>
+	</dependencies>
 	<profiles>
 		<profile>
 			<id>full</id>
 			<build>
 				<plugins>
 					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>attach-javadocs</id>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+								<phase>prepare-package</phase>
+								<configuration>
+									<includeDependencySources>true</includeDependencySources>
+									<dependencySourceIncludes>
+										<dependencySourceInclude>${project.groupId}:*</dependencySourceInclude>
+									</dependencySourceIncludes>
+									<attach>false</attach>
+									<quiet>true</quiet>
+									<stylesheetfile>${basedir}/src/main/javadoc/spring-javadoc.css</stylesheetfile>
+									<links>
+										<link>http://docs.spring.io/spring-framework/docs/${spring.version}/javadoc-api/</link>
+										<link>http://docs.spring.io/spring-shell/docs/current/api/</link>
+									</links>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+					<plugin>
 						<groupId>org.asciidoctor</groupId>
 						<artifactId>asciidoctor-maven-plugin</artifactId>
 						<version>1.5.3</version>
+						<dependencies>
+						</dependencies>
 						<executions>
 							<execution>
 								<id>generate-docbook</id>
@@ -29,10 +91,10 @@
 									<doctype>book</doctype>
 									<attributes>
 										<docinfo>true</docinfo>
-										<project-version>${project.version}</project-version>
-										<project-artifactId>${project.artifactId}</project-artifactId>
 										<allow-uri-read>true</allow-uri-read>
 										<attribute-missing>warn</attribute-missing>
+										<project-version>${project.version}</project-version>
+										<project-artifactId>${project.artifactId}</project-artifactId>
 									</attributes>
 								</configuration>
 							</execution>
@@ -164,6 +226,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.7</version>
 						<dependencies>
 							<dependency>
 								<groupId>ant-contrib</groupId>
@@ -196,7 +259,8 @@
 								</goals>
 								<configuration>
 									<target>
-										<zip destfile="${project.build.directory}/spring-cloud-stream-modules-${project.version}.zip">
+										<zip destfile="${project.build.directory}/${project.artifactId}-${project.version}.zip">
+											<zipfileset src="${project.build.directory}/${project.artifactId}-${project.version}-javadoc.jar" prefix="api" />
 											<fileset dir="${project.build.directory}/contents" />
 										</zip>
 									</target>
@@ -240,7 +304,7 @@
 								<configuration>
 									<artifacts>
 										<artifact>
-											<file>${project.build.directory}/spring-cloud-stream-modules-${project.version}.zip</file>
+											<file>${project.build.directory}/${project.artifactId}-${project.version}.zip</file>
 											<type>zip;zip.type=docs;zip.deployed=false</type>
 										</artifact>
 									</artifacts>
