Added SparkAppCommonTaskProperties to whitelist

--- a/spring-cloud-starter-task-spark-cluster/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/spring-cloud-starter-task-spark-cluster/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -14,5 +14,5 @@
 #  limitations under the License.
 #
 
-configuration-properties.classes=org.springframework.cloud.task.app.spark.cluster.SparkClusterTaskProperties
-
+configuration-properties.classes=org.springframework.cloud.task.app.spark.cluster.SparkClusterTaskProperties, \
+  org.springframework.cloud.task.sparkapp.common.SparkAppCommonTaskProperties
