SparkYarn properties no longer use inheritance.
So all descriptions and defaults will show up.

--- a/spring-cloud-starter-task-spark-yarn/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
+++ b/spring-cloud-starter-task-spark-yarn/src/main/resources/META-INF/spring-configuration-metadata-whitelist.properties
@@ -14,5 +14,6 @@
 #  limitations under the License.
 #
 
-configuration-properties.classes=org.springframework.cloud.task.app.spark.yarn.SparkYarnTaskProperties
+configuration-properties.classes=org.springframework.cloud.task.app.spark.yarn.SparkYarnTaskProperties, \
+  org.springframework.cloud.task.sparkapp.common.SparkAppCommonTaskProperties
 
