--- a/spring-cloud-task-app-generator/pom.xml
+++ b/spring-cloud-task-app-generator/pom.xml
@@ -72,7 +72,7 @@
                         <spark-yarn-task/>
                         <sqoop-job-task/>
                         <sqoop-tool-task/>
-                        <jdbc-hdfs-local-task/>
+                        <jdbchdfs-local-task/>
                     </generatedApps>
                 </configuration>
             </plugin>
